--- a/index.html
+++ b/index.html
@@ -554,11 +554,11 @@
     <div class="incoming-call-overlay" id="incomingCallOverlay">
         <div class="call-avatar-large">
             <!-- Mesma foto da câmera -->
-            <img src="brilha.PNG" alt="Amanda" onerror="this.style.display='none'; this.parentElement.textContent='AM';">
+            <img src="amanda.jpg" alt="Amanda" onerror="this.style.display='none'; this.parentElement.textContent='AM';">
         </div>
         
         <div class="incoming-call-info">
-            <h2>Amanda</h2>
+            <h2>Mary</h2>
             <p>📞 Chamada de vídeo recebida</p>
         </div>
         
