--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                 <!-- <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?w=100&h=100&fit=crop&crop=face" alt="Amanda" onerror="this.style.display='none'; this.parentElement.textContent='AM';"> -->
             </div>
             <div class="contact-details">
-                <h3>Amanda</h3>
+                <h3>Mary</h3>
                 <div class="call-status">Chamando...</div>
             </div>
         </div>
