--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
         </div>
         
         <div class="incoming-call-info">
-            <h2>Mary ❤️</h2>
+            <h2>Mary</h2>
             <p>📞 Chamada de vídeo recebida</p>
         </div>
         
