--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         <div class="contact-info">
             <div class="contact-avatar">
                 <!-- Opção 1: Foto local (coloque o arquivo na mesma pasta) -->
-                <img src="brilha.PNG" alt="Amanda" onerror="this.style.display='none'; this.parentElement.textContent='AM';">
+                <img src="amanda.jpg" alt="Amanda" onerror="this.style.display='none'; this.parentElement.textContent='AM';">
                 
                 <!-- Opção 2: URL da internet (descomente para usar) -->
                 <!-- <img src="https://images.unsplash.com/photo-1494790108755-2616b612b786?w=100&h=100&fit=crop&crop=face" alt="Amanda" onerror="this.style.display='none'; this.parentElement.textContent='AM';"> -->
